--- a/Maestro/Maestro.Wpf/Views/FlightLabelView.xaml
+++ b/Maestro/Maestro.Wpf/Views/FlightLabelView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Maestro.Wpf.AircraftView"
+﻿<UserControl x:Class="Maestro.Wpf.Views.FlightLabelView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:viewModels="clr-namespace:Maestro.Wpf.ViewModels"
              xmlns:converters="clr-namespace:Maestro.Wpf.Converters"
-             xmlns:wpf="clr-namespace:Maestro.Wpf"
+             xmlns:views="clr-namespace:Maestro.Wpf.Views"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=viewModels:FlightViewModel}"
              d:DesignHeight="16"
@@ -25,7 +25,7 @@
                 
                 <Style.Triggers>
                     <DataTrigger
-                        Binding="{Binding LadderPosition, RelativeSource={RelativeSource AncestorType={x:Type wpf:AircraftView}}}"
+                        Binding="{Binding LadderPosition, RelativeSource={RelativeSource AncestorType={x:Type views:FlightLabelView}}}"
                         Value="Left">
 
                         <Setter Property="TextAlignment" Value="Right"/>
@@ -39,7 +39,7 @@
                 
                 <Style.Triggers>
                     <DataTrigger
-                        Binding="{Binding LadderPosition, RelativeSource={RelativeSource AncestorType={x:Type wpf:AircraftView}}}"
+                        Binding="{Binding LadderPosition, RelativeSource={RelativeSource AncestorType={x:Type views:FlightLabelView}}}"
                         Value="Left">
 
                         <Setter Property="FlowDirection" Value="RightToLeft"/>
