--- a/Maestro/Maestro.Wpf/Views/MaestroView.xaml
+++ b/Maestro/Maestro.Wpf/Views/MaestroView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Maestro.Wpf.MaestroView"
+﻿<UserControl x:Class="Maestro.Wpf.Views.MaestroView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
