--- a/Maestro/Maestro.Wpf/Styles.xaml
+++ b/Maestro/Maestro.Wpf/Styles.xaml
@@ -244,7 +244,11 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type MenuItem}">
-                    <Button Style="{StaticResource ButtonBaseStyle}" HorizontalContentAlignment="Stretch">
+                    <Button
+                        Style="{StaticResource ButtonBaseStyle}"
+                        HorizontalContentAlignment="Stretch"
+                        Command="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Command}"
+                        CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=CommandParameter}">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
